feat(login, routing): adicionar routing e logica para login / logout com oauth do facebook + expressjs.

--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Estações de Bicicleta em Porto Alegre</title>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
 
@@ -18,9 +18,9 @@
 
 		<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&key=AIzaSyCa3C5eOahcfE77jpNAGcA079U99lDWYiI"></script>
-		<script type="text/javascript" src="javascripts/bikestation-datapoa-configuration.js"></script>
-		<script type="text/javascript" src="javascripts/location.js"></script>
-		<script type="text/javascript" src="javascripts/load-datapoa.js"></script>
-		<script type="text/javascript" src="javascripts/main.js"></script>
+		<script type="text/javascript" src="js/bikestation-datapoa-configuration.js"></script>
+		<script type="text/javascript" src="js/location.js"></script>
+		<script type="text/javascript" src="js/load-datapoa.js"></script>
+		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
