--- a/views/index.html
+++ b/views/index.html
@@ -16,7 +16,7 @@
 			<p id="number">Seu número é {{Number}}.</p>
 		</div>
 		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&key=AIzaSyCa3C5eOahcfE77jpNAGcA079U99lDWYiI"></script>
+		<script type="text/javascript" src="js/GoogleMapsApi.js"></script>
 		<script type="text/javascript" src="js/constants.js"></script>
 		<script type="text/javascript" src="js/bikestation-datapoa-configuration.js"></script>
 		<script type="text/javascript" src="js/location.js"></script>
