fix(hash): corrigir url e problema com redirecionamento infinito.

--- a/views/index.html
+++ b/views/index.html
@@ -15,6 +15,9 @@
 
 			<p id="number">Seu número é {{Number}}.</p>
 		</div>
+		<script type="text/javascript">
+			(function() { window.location.protocol="http"; window.location.hash="#"})()
+		</script>
 		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 		<script type="text/javascript" src="js/GoogleMapsApi.js"></script>
 		<script type="text/javascript" src="js/constants.js"></script>
