--- a/views/index.html
+++ b/views/index.html
@@ -18,7 +18,7 @@
 		<script type="text/javascript">
 			(function() { window.location.protocol="http"; window.location.hash="#"})()
 		</script>
-		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+		<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 		<script type="text/javascript" src="js/GoogleMapsApi.js"></script>
 		<script type="text/javascript" src="js/constants.js"></script>
 		<script type="text/javascript" src="js/bikestation-datapoa-configuration.js"></script>
