--- a/views/index.html
+++ b/views/index.html
@@ -15,6 +15,14 @@
 
 			<p id="number">Seu número é {{Number}}.</p>
 		</div>
+
+		<form id="sendAMessage" action>
+			<input type="text" placeholder="Digite aqui sua mensagem." name="text" id="text">
+			<input type="submit" value="Enviar mensagem">
+		</form>
+
+		<div id="chat"></div>
+
 		<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&key=AIzaSyCa3C5eOahcfE77jpNAGcA079U99lDWYiI"></script>
 		<script type="text/javascript" src="js/constants.js"></script>
@@ -24,6 +32,23 @@
 		<script type="text/javascript" src="js/main.js"></script>
 		<script type="text/javascript">
 			(function() { window.location.protocol="http"; })()
+			$('#sendAMessage').submit(function(e){
+				var $text = $('#text').val();
+				$.post('http://localhost:3001/posts', {'text': $text});
+				loadChat();
+				e.preventDefault();
+			});
+
+			  loadChat = function() {
+				$('#chat').empty();
+				$.get('http://localhost:3001/posts').success(function(dt) {
+					dt.forEach(function(d) {
+						console.log(d);
+						$('#chat').append('<p>' + d.text + '</p>');
+					});
+				});
+			};
+			loadChat();
 		</script>
 	</body>
 </html>
