--- a/views/index.html
+++ b/views/index.html
@@ -39,16 +39,25 @@
 				e.preventDefault();
 			});
 
-			  loadChat = function() {
+			var loadChat = function() {
 				$('#chat').empty();
 				$.get('http://localhost:3001/posts').success(function(dt) {
 					dt.forEach(function(d) {
-						console.log(d);
-						$('#chat').append('<p>' + d.text + '</p>');
+						$('#chat').append('<p>' + d.text + '</p><button onclick="' + `removerData(${d.id})` + '">Remover anotação</button>');
 					});
 				});
 			};
 			loadChat();
+
+			var removerData = function(idThis) {
+				$.ajax({
+					url: `http://localhost:3001/posts/${idThis}`,
+					type: 'DELETE',
+					contentType:'application/json'
+				}).success(function() {
+					loadChat();
+				})
+			}
 		</script>
 	</body>
 </html>
