feat(db): adicionar registro de coordenadas latitude longitude com json-server.

--- a/views/login.html
+++ b/views/login.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Facebook Login using Node and Express</title>
+        <title>Login</title>
     </head>
     <body>
         <div style="width:500px;height:180px;background-color:#ececec;padding:80px;margin-left:22%;margin-top:9%;">
