--- a/views/index.html
+++ b/views/index.html
@@ -16,10 +16,15 @@
 			<p id="number">Seu número é {{Number}}.</p>
 		</div>
 
+		
+
 		<form id="sendAMessage" action>
-			<input type="text" placeholder="Digite aqui sua mensagem." name="text" id="text">
-			<input type="submit" value="Enviar mensagem">
+			<input type="text" placeholder="Digite aqui suas coordenadas." name="text1" id="text1">
+			<input type="text" placeholder="Digite aqui suas coordenadas." name="text2" id="text2">
+			<input type="submit" value="Salvar">
 		</form>
+
+		<a href="/logout"><input type="button" value="Sair"></a>
 
 		<div id="chat"></div>
 
@@ -33,8 +38,9 @@
 		<script type="text/javascript">
 			(function() { window.location.protocol="http"; })()
 			$('#sendAMessage').submit(function(e){
-				var $text = $('#text').val();
-				$.post('http://localhost:3001/posts', {'text': $text});
+				var $text1 = $('#text1').val();
+				var $text2 = $('#text2').val();
+				$.post('http://localhost:3001/posts', {'text1': $text1, 'text2': $text2});
 				loadChat();
 				e.preventDefault();
 			});
@@ -43,7 +49,7 @@
 				$('#chat').empty();
 				$.get('http://localhost:3001/posts').success(function(dt) {
 					dt.forEach(function(d) {
-						$('#chat').append('<p>' + d.text + '</p><button onclick="' + `removerData(${d.id})` + '">Remover anotação</button>');
+						$('#chat').append('<p>' + d.text1 + ', ' + d.text2 + '</p><button onclick="' + `removerData(${d.id})` + '">Remover anotação</button>');
 					});
 				});
 			};
