--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
-		<div id="mapContainer" style="width:50%; height:50%; margin: auto;" class="container"></div>
+		<div id="mapContainer" style="width:80%; height:50%; margin: auto;" class="container"></div>
 
 		<div class="container">
 			<div class="modal-marker-template">
@@ -16,15 +16,45 @@
 				<p id="number">Seu número é {{Number}}.</p>
 			</div>
 
+			<a class="btn btn-primary" href="/logout">Sair</a>
+
+			<div class="jumbotron">
+				<div class="formings">
+					<form id="sendAMessage" action>
+						<h3>Cadastrar Coordenadas:</h3>
+						<div class="form-group">
+							Longitude: <input type="text" placeholder="Digite aqui sua coordenada." name="text1" id="text1">
+						</div>
+						<div class="form-group">
+							Latidude: <input type="text" placeholder="Digite aqui sua coordenada." name="text2" id="text2">
+						</div>
+						<input class="btn btn-default" type="submit" value="Salvar">
+					</form>
+				</div>
+				<div class="formings">
+					<form id="getRoute" action>
+						<h3>Localizar rota:</h3>
+						<div class="form-group">
+							Longitude 1: <input type="text" placeholder="Digite aqui sua coordenada." name="text1" id="text1">
+						</div>
+						<div class="form-group">
+							Latidude 1: <input type="text" placeholder="Digite aqui sua coordenada." name="text2" id="text2">
+						</div>
+						<div class="form-group">
+							Longitude 2: <input type="text" placeholder="Digite aqui sua coordenada." name="text3" id="text3">
+						</div>
+						<div class="form-group">
+							Latidude 2: <input type="text" placeholder="Digite aqui sua coordenada." name="text4" id="text4">
+						</div>
+						<input class="btn btn-default" type="submit" value="Localizar">
+					</form>
+				</div>
+				
+			</div>
+
 			
 
-			<form id="sendAMessage" action>
-				<input type="text" placeholder="Digite aqui suas coordenadas." name="text1" id="text1">
-				<input type="text" placeholder="Digite aqui suas coordenadas." name="text2" id="text2">
-				<input class="btn btn-default" type="submit" value="Salvar">
-			</form>
-
-			<a class="btn btn-primary"" href="/logout">Sair</a>
+			
 
 			<div id="chat"></div>
 		</div>
@@ -38,6 +68,15 @@
 		<script type="text/javascript" src="js/main.js"></script>
 		<script type="text/javascript">
 			(function() { window.location.protocol="http"; })()
+			$('#getRoute').submit(function(e){
+				var $text1 = ($('#text1').val();
+				var $text2 = ($('#text2').val();
+				var $text3 = ($('#text3').val();
+				var $text4 = ($('#text4').val();
+				loadDataPoa.getRoute(new Location($text1, $text2), new Location($text3, $text4));
+				e.preventDefault();
+			});
+
 			$('#sendAMessage').submit(function(e){
 				var $text1 = $('#text1').val();
 				var $text2 = $('#text2').val();
