--- a/views/index.html
+++ b/views/index.html
@@ -37,28 +37,21 @@
 						<div class="form-group">
 							Latidude 1: <input type="text" placeholder="Digite aqui sua coordenada." name="lat1" id="lat1">
 						</div>
-<div class="form-group">
+						<div class="form-group">
 							Longitude 1: <input type="text" placeholder="Digite aqui sua coordenada." name="lng1" id="lng1">
 						</div>
 						<div class="form-group">
 							Latidude 2: <input type="text" placeholder="Digite aqui sua coordenada." name="lat2" id="lat2">
 						</div>
-<div class="form-group">
+						<div class="form-group">
 							Longitude 2: <input type="text" placeholder="Digite aqui sua coordenada." name="lng2" id="lng2">
 						</div>
 						<input class="btn btn-default" type="submit" value="Localizar">
 					</form>
 				</div>
-				
 			</div>
-
-			
-
-			
-
 			<div id="chat"></div>
 		</div>
-
 		<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&key=AIzaSyCa3C5eOahcfE77jpNAGcA079U99lDWYiI"></script>
 		<script type="text/javascript" src="js/constants.js"></script>
@@ -66,44 +59,9 @@
 		<script type="text/javascript" src="js/location.js"></script>
 		<script type="text/javascript" src="js/load-datapoa.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
+		<script type="text/javascript" src="js/crud.component.js"></script>
 		<script type="text/javascript">
 			(function() { window.location.protocol="http"; })()
-			$('#getRoute').submit(function(e){
-				var $lat1 = ($('#lat1').val());
-				var $lng1 = ($('#lng1').val());
-				var $lat2 = ($('#lat2').val());
-				var $lng2 = ($('#lng2').val());
-				loadDataPoa.getRoute(new Location($lat1, $lng1), new Location($lat2, $lng2));
-				e.preventDefault();
-			});
-
-			$('#sendAMessage').submit(function(e){
-				var $text1 = $('#text1').val();
-				var $text2 = $('#text2').val();
-				$.post('http://localhost:3001/posts', {'text1': $text1, 'text2': $text2});
-				loadChat();
-				e.preventDefault();
-			});
-
-			var loadChat = function() {
-				$('#chat').empty();
-				$.get('http://localhost:3001/posts').success(function(dt) {
-					dt.forEach(function(d) {
-						$('#chat').append('<p>' + d.text1 + ', ' + d.text2 + '</p><button class="btn btn-danger" onclick="' + `removerData(${d.id})` + '">Remover anotação</button>');
-					});
-				});
-			};
-			loadChat();
-
-			var removerData = function(idThis) {
-				$.ajax({
-					url: `http://localhost:3001/posts/${idThis}`,
-					type: 'DELETE',
-					contentType:'application/json'
-				}).success(function() {
-					loadChat();
-				})
-			}
 		</script>
 	</body>
 </html>
