--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,15 +1,48 @@
-html, body, #mapContainer {
+html, body {
   height: 100vh;
   padding: 0px;
+}
+
+#mapContainer {
+  width: 100%;
+  height: 80vh;
+  margin: auto;
+  padding: 0;
+}
+
+#chat {
+    margin: 20px 0px 0px 20px;
+}
+
+.center {
+  text-align: center;
+}
+
+.jumbotron {
+  margin-bottom: 0;
+}
+
+.formings {
+  width: 90%;
+  display: inline-block;
+  margin: 0 auto;
+}
+
+.formings form div {
+  width: 49%;
+  display: inline-block;
+}
+
+.formings form div:nth-child(even), .formings form .btn {
+    float: right;
+}
+
+.formings .form-control-sm {
+  text-align: center;
+  height: 30px;
 }
 
 .modal-marker-template {
   display: none;
   margin: auto;
-}
-
-.formings {
-  display: inline-block;
-  height: 100%;
-  margin-right: 10%;
 }
