--- a/views/login.html
+++ b/views/login.html
@@ -1,11 +1,51 @@
 <html>
     <head>
         <title>Login</title>
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+        <style>
+            .vertical-center {
+                min-height: 60vh; /* These two lines are counted as one :-)       */
+                padding-left: 30em;
+                padding-right: 30em;
+
+                display: flex;
+                align-items: center;
+                text-align: center;
+            }
+
+            .container {
+                color: white;
+            }
+
+            .jumbotron {
+                background-color: rgba(0, 0, 0, 0.7);
+            }
+            
+            body {
+                background-image: url('bike-ground.jpg');
+                background-repeat: no-repeat;
+                background-attachment: fixed;
+                background-position: center;
+                background-size: cover;
+            }
+        </style>
     </head>
     <body>
-        <div style="width:500px;height:180px;background-color:#ececec;padding:80px;margin-left:22%;margin-top:9%;">
-            <h2 style="font-size:40px;">Welcome! Please log in.</h2>
-            <a href="/auth/facebook"><img src="fb-login.jpg" width="151" height="24"></a>
+        <div class="vertical-center">
+            <div class="container jumbotron">
+                <h2 style="font-size:40px;">Bem-Vindo ao BikeStation! </h2> <h4> Por favor, faça seu Login.</h4>
+                <br><br><br>
+                <a class="btn btn-primary" href="/auth/facebook">Login com facebook</a>
+            </div>
         </div>
+        <footer class="container" style="bottom: 0; background-color: black; position: fixed; height: 10%; width: 100%">
+            <div class="conainer" style="text-align: center; margin: 0 auto;">
+                <h4> Um wesite criado para ciclistas de POA. </h4>
+                <h5> Todos os direitos reservados. </h5>
+                <p style="float: right;">
+                    IFSUL - Sapucaia do Sul
+                </p>
+            </div>
+        </footer>
     </body>
 </html>
