fix(index): corrigir alguns mecanismos do layout na tela principal.

--- a/views/index.html
+++ b/views/index.html
@@ -8,27 +8,27 @@
 	</head>
 	<body>
 		<div>
-			<a id="logout" class="btn btn-primary" href="/logout">Encerrar Sessão</a>
+			<a id="logout" style="float: right;" class="btn btn-primary" href="/logout">Encerrar Sessão, </a>
 		</div>
 		<div class="jumbotron center">
-			<div class="formings">
+			<div class="formings row">
 				<form id="getRoute" action>
 					<h3>Localizar rota:</h3>
 					<div class="form-group">
 						<label for="email">Latidude 1:</label>
-						<input class="form-control form-control-sm" type="text" placeholder="Digite aqui sua coordenada." name="lat1" id="lat1">
+						<input class="form-control form-control" type="text" placeholder="Digite aqui sua coordenada." name="lat1" id="lat1">
 					</div>
 					<div class="form-group">
 						<label for="email">Longitude 1:</label>
-						<input class="form-control form-control-sm" type="text" placeholder="Digite aqui sua coordenada." name="lng1" id="lng1">
+						<input class="form-control form-control" type="text" placeholder="Digite aqui sua coordenada." name="lng1" id="lng1">
 					</div>
 					<div class="form-group">
 						<label for="email">Latidude 2:</label>
-						<input class="form-control form-control-sm" type="text" placeholder="Digite aqui sua coordenada." name="lat2" id="lat2">
+						<input class="form-control form-control" type="text" placeholder="Digite aqui sua coordenada." name="lat2" id="lat2">
 					</div>
 					<div class="form-group">
 						<label for="email">Longitude 2:</label>
-						<input class="form-control form-control-sm" type="text" placeholder="Digite aqui sua coordenada." name="lng2" id="lng2">
+						<input class="form-control form-control" type="text" placeholder="Digite aqui sua coordenada." name="lng2" id="lng2">
 					</div>
 					<input class="btn btn-default" type="submit" value="Localizar">
 				</form>
@@ -49,11 +49,11 @@
 					<h3>Cadastrar Coordenadas:</h3>
 					<div class="form-group">
 						<label for="email">Longitude:</label>
-						<input class="form-control form-control-sm" type="text" placeholder="Digite aqui sua coordenada." name="text1" id="text1">
+						<input class="form-control form-control" type="text" placeholder="Digite aqui sua coordenada." name="text1" id="text1">
 					</div>
 					<div class="form-group">
 						<label for="email">Latitude:</label>
-						<input class="form-control form-control-sm" type="text" placeholder="Digite aqui sua coordenada." name="text2" id="text2">
+						<input class="form-control form-control" type="text" placeholder="Digite aqui sua coordenada." name="text2" id="text2">
 					</div>
 					<input class="btn btn-default" type="submit" value="Salvar">
 				</form>
