fix(mensagem): corrigir mensagem do footer na tela de login.

--- a/views/login.html
+++ b/views/login.html
@@ -40,7 +40,7 @@
         </div>
         <footer class="container" style="bottom: 0; background-color: black; position: fixed; height: 10%; width: 100%">
             <div class="conainer" style="text-align: center; margin: 0 auto;">
-                <h4> Um wesite criado para ciclistas de POA. </h4>
+                <h4> Um website criado para ciclistas de POA. </h4>
                 <h5> Todos os direitos reservados. </h5>
                 <p style="float: right;">
                     IFSUL - Sapucaia do Sul
